[package]
name = "engine"
version = "0.1.0"
authors = ["Andrew Langmeier <raymi306@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", default-features = false, features = ["ttf"] }
rand = { version = "0.8.4" }
